--- a/movie-app/src/App.css
+++ b/movie-app/src/App.css
@@ -1,3 +1,7 @@
+@import 'primereact/resources/themes/saga-blue/theme.css';
+@import 'primereact/resources/primereact.min.css';
+@import 'primeicons/primeicons.css';
+@import 'primeflex/primeflex.css';
 .App {
     text-align: center;
 }
@@ -116,7 +120,7 @@
 .dataview-demo .product-grid-item .product-grid-item-bottom {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .dataview-demo .product-grid-item img {
@@ -132,6 +136,34 @@
 .dataview-demo .product-grid-item .product-price {
     font-size: 1.5rem;
     font-weight: 600;
+}
+
+@media screen and (max-width: 576px) {
+    .dataview-demo .product-list-item {
+        flex-direction: column;
+        align-items: center;
+    }
+    .dataview-demo .product-list-item img {
+        width: 75%;
+        margin: 2rem 0;
+    }
+    .dataview-demo .product-list-item .product-list-detail {
+        text-align: center;
+    }
+    .dataview-demo .product-list-item .product-price {
+        align-self: center;
+    }
+    .dataview-demo .product-list-item .product-list-action {
+        display: flex;
+        flex-direction: column;
+    }
+    .dataview-demo .product-list-item .product-list-action {
+        margin-top: 2rem;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 576px) {
